Tweak global .gitconfig stuff (add mergetools, difftools, global ignore files)

--- a/.gitconfig
+++ b/.gitconfig
@@ -10,6 +10,7 @@
 [core]
 	editor = mate -w
 	autocrlf = input
+	excludesfile = /Users/lkoskela/.gitignore_global
 [alias]
 	st = status
 	ci = commit -v
@@ -31,4 +32,10 @@
 	tool = diffmerge
 [mergetool "diffmerge"]
 	cmd = "diffmerge --merge --result=\"$MERGED\" \"$LOCAL\" \"$(if test -f \"$BASE\"; then echo \"$BASE\"; else echo \"$LOCAL\"; fi)\" \"$REMOTE\""
+	trustExitCode = true
+[difftool "sourcetree"]
+	cmd = opendiff \"$LOCAL\" \"$REMOTE\"
+	path = 
+[mergetool "sourcetree"]
+	cmd = /Applications/SourceTree.app/Contents/Resources/opendiff-w.sh \"$LOCAL\" \"$REMOTE\" -ancestor \"$BASE\" -merge \"$MERGED\"
 	trustExitCode = true
