--- a/.inputrc
+++ b/.inputrc
@@ -4,4 +4,8 @@ set convert-meta off
 set input-meta on
 set output-meta on
 set visible-stats on
+set show-all-if-ambiguous on
 set completion-ignore-case on
+
+"\e[A": history-search-backward
+"\e[B": history-search-forward
