--- a/.gitconfig
+++ b/.gitconfig
@@ -39,3 +39,8 @@
 [mergetool "sourcetree"]
 	cmd = /Applications/SourceTree.app/Contents/Resources/opendiff-w.sh \"$LOCAL\" \"$REMOTE\" -ancestor \"$BASE\" -merge \"$MERGED\"
 	trustExitCode = true
+
+# https://github.com/alebedev/git-media
+[filter "media"]
+	clean = git-media-clean %f
+	smudge = git-media-smudge %f
