--- a/.gitconfig
+++ b/.gitconfig
@@ -44,3 +44,7 @@
 [filter "media"]
 	clean = git-media-clean %f
 	smudge = git-media-smudge %f
+[url "https://lkoskela@github.com"]
+	insteadOf = https://github.com
+[credential]
+	helper = cache --timeout=1209600
