Switch reaktor.fi to reaktor.com in .gitconfig

--- a/.gitconfig
+++ b/.gitconfig
@@ -1,6 +1,6 @@
 [user]
 	name = Lasse Koskela
-	email = lasse.koskela@reaktor.fi
+	email = lasse.koskela@reaktor.com
 [color]
 	status = auto
 	diff = auto
