--- a/.gitconfig
+++ b/.gitconfig
@@ -8,7 +8,7 @@
 	interactive = auto
 	ui = true
 [core]
-	editor = mate -w
+	editor = vi
 	autocrlf = input
 	excludesfile = /Users/lkoskela/.gitignore_global
 [alias]
