--- a/.gitconfig
+++ b/.gitconfig
@@ -48,3 +48,8 @@
 	insteadOf = https://github.com
 [credential]
 	helper = cache --timeout=1209600
+[filter "lfs"]
+	clean = git-lfs clean -- %f
+	smudge = git-lfs smudge -- %f
+	process = git-lfs filter-process
+	required = true
